# adishop

./: .gitignore  Dockerfile  db_loader.py  docker-compose.yml  products.csv  pyproject.toml  services.py
adishop/: app.py
adishop/api/: shopping_cart.py
adishop/services/: __init__.py  base.py  cart.py  inventory.py  product.py  shopping_cart.py
adishop/templates/: index.jinja  shopping_cart.jinja
adishop/temporal/: worker.py
adishop/temporal/activities/: inventory.py
adishop/temporal/tests/: test_update_cart.py
adishop/temporal/workflows/: update_cart.py
