[tool.poetry]
name = "adishop"
version = "0.1.0"
description = ""
authors = ["Adi Wabisabi <technobabelfish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
temporalio = "^1.11.1"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
flask = {extras = ["async"], version = "^3.1.0"}

[tool.poetry.scripts]
web = "adishop.app:main"
service-mock = "adishop.services.base:main"
worker = "adishop.temporal.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
