[tool.poetry]
name = "adishop"
version = "0.1.0"
description = ""
authors = ["Adi Wabisabi <technobabelfish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.11.1"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
flask = {extras = ["async"], version = "^3.1.0"}

[tool.poetry.scripts]
service-base = "adishop.services.base:main"
service-cart = "adishop.services.cart:main"
service-inventory = "adishop.services.inventory:main"
service-product = "adishop.services.product:main"
web = "adishop.app:main"
worker = "adishop.temporal.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
